--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,6 +1,9 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-    <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
+    <li *ngFor="let hero of heroes"
+     [class.selected] = "hero === selectedHero"
+     (click)="onSelect(hero)"
+     >
         <span class="badge">
             {{hero.id}}
         </span>
@@ -8,12 +11,14 @@
     </li>
 </ul>
 
-<h2>{{hero.name | uppercase}} Details</h2>
-<div><span>id: </span> {{hero.id}}</div>
-<div><span>name: </span> {{hero.name}}</div>
-
-<div>
-    <label for="name">Hero name: </label>
-    <input id="name" type="text" [(ngModel)]="hero.name" placeholder="name">
+<div *ngIf="selectedHero">
+    <h2>{{selectedHero.name | uppercase}} Details</h2>
+    <div><span>id: </span> {{selectedHero.id}}</div>
+    <div><span>name: </span> {{hero.name}}</div>
+    <div>
+        <label for="name">Hero name: </label>
+        <input id="name" type="text" [(ngModel)]="selectedHero.name" placeholder="name">
+    </div>
 </div>
+
 
