--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,5 +7,5 @@
         <input id="hero-name" type="text" [(ngModel)]="hero.name" placeholder="name">
     </div>
 </div>
-
+<button (click)="goBack()">Go back</button>
  
