--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -5,5 +5,14 @@
             <span class="badge"> {{hero.id}} </span>
             {{hero.name}}
         </a>
+        <button class="delete" title="delete hero"
+        (click)="delete(hero)">x</button>
     </li>
 </ul>
+
+<div>
+    <label id="new-hero">Hero Name:</label>
+    <input type="text" #heroName/>
+
+    <button class="add-button" (click)="add(heroName.value); heroName.value=''">Add hero</button>
+</div>
